--- a/README
+++ b/README
@@ -1,5 +1,18 @@
 A Simple 2D Carrom Board
 
+Libraries needed
+  OpenGL: sudo apt-get install libglu1-mesa-dev freeglut3-dev mesa-common-dev
+  OpenAL: sudo apt-get install libopenal1 libopenal-dev
+  ALUT:   sudo apt-get install libalut0 libalut-dev
+
+- How to Run ?
+
+ make clean
+ make
+ ./a.out
+
+- How to Play ?
+
 Controls
 --------
 
