--- a/README
+++ b/README
@@ -1,17 +1,18 @@
-A Simple 2D Carrom Board
+A Simple 2D Carrom Board Game
 
 Libraries needed
+----------------
   OpenGL: sudo apt-get install libglu1-mesa-dev freeglut3-dev mesa-common-dev
   OpenAL: sudo apt-get install libopenal1 libopenal-dev
   ALUT:   sudo apt-get install libalut0 libalut-dev
 
-- How to Run ?
+- How do I run it ?
 
  make clean
  make
  ./a.out
 
-- How to Play ?
+- How do I play ?
 
 Controls
 --------
